--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Mr Echaffaudage</title>
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="static/css/index.css">
 </head>
 <body>
     <div class="menu">
         <div class="mHead">
             <a class="home" href="index.html">Mr Echaffaudage</a>
             <button class="close">
-                <img src="../static/images/menuClose.png" alt="menu close">
+                <img src="static/images/menuClose.png" alt="menu close">
             </button>
         </div>
         <div class="mBody">
             <nav>
-                <a href="./services.html">
-                    <figure><img src="../static/images/services.png" alt="services"></figure>
+                <a href="templates/services.html">
+                    <figure><img src="static/images/services.png" alt="services"></figure>
                     <p>Services</p>
                 </a>
-                <a href="./contact.html">
-                    <figure><img src="../static/images/contact.png" alt="contact"></figure>
+                <a href="templates/contact.html">
+                    <figure><img src="static/images/contact.png" alt="contact"></figure>
                     <p>Contacts</p>
                 </a>
-                <a href="./notify.html">
-                    <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+                <a href="templates/notify.html">
+                    <figure><img src="static/images/notifications.png" alt="notifications"></figure>
                     <p>Notifications</p>
                 </a>
             </nav>
@@ -37,18 +37,18 @@
     <section class="articleDetails">
         <div class="sHead">
             <a href="index.html">Mr Echaffaudage</a>
-            <figure id="close"><img src="../static/images/menuClose.png" alt=""></figure>
+            <figure id="close"><img src="static/images/menuClose.png" alt=""></figure>
         </div>
         <div class="sBody">
             <div class="screen">
-                <figure class="mainImg"><img src="../static/images/im4.jpeg" alt="im4"></figure>
+                <figure class="mainImg"><img src="static/images/im4.jpeg" alt="im4"></figure>
                 <ul>
-                    <li><img src="../static/images/im4.jpeg" alt="im4"></li>
-                    <li><img src="../static/images/im4.jpeg" alt="im4"></li>
-                    <li><img src="../static/images/im4.jpeg" alt="im4"></li>
+                    <li><img src="static/images/im4.jpeg" alt="im4"></li>
+                    <li><img src="static/images/im4.jpeg" alt="im4"></li>
+                    <li><img src="static/images/im4.jpeg" alt="im4"></li>
                 </ul>
-                <a href="./contact.html" class="call">
-                    <figure><img src="../static/images/call.png" alt="smartphone"></figure>
+                <a href="templates/contact.html" class="call">
+                    <figure><img src="static/images/call.png" alt="smartphone"></figure>
                     <p>Me contacter pour ce service</p>
                 </a>
             </div>
@@ -65,19 +65,19 @@
                 <ul>
                     <li>
                         <figure>
-                            <img src="../static/images/marks.png" alt="marks">
+                            <img src="static/images/marks.png" alt="marks">
                         </figure>
                         <figcaption>a ete note +4.5/5</figcaption>
                     </li>
                     <li>
                         <figure>
-                            <img src="../static/images/satisfied.png" alt="satisfied">
+                            <img src="static/images/satisfied.png" alt="satisfied">
                         </figure>
                         <figcaption>+15 clients satisfaits</figcaption>
                     </li>
                     <li>
                         <figure>
-                            <img src="../static/images/recommend.png" alt="recommend">
+                            <img src="static/images/recommend.png" alt="recommend">
                         </figure>
                         <figcaption>+20 recommendations</figcaption>
                     </li>
@@ -88,25 +88,25 @@
 
     <header>
         <figure class="menuOpen">
-            <img src="../static/images/menuOpen.png" alt="menuOpen">
+            <img src="static/images/menuOpen.png" alt="menuOpen">
         </figure>
         <a href="index.html" class="home">Mr Echaffaudage</a>
         <nav>
-            <a href="./services.html">
-                <figure><img src="../static/images/services.png" alt="services"></figure>
+            <a href="templates/services.html">
+                <figure><img src="static/images/services.png" alt="services"></figure>
                 <p>Services</p>
             </a>
-            <a href="./contact.html">
-                <figure><img src="../static/images/contact.png" alt="contact"></figure>
+            <a href="templates/contact.html">
+                <figure><img src="static/images/contact.png" alt="contact"></figure>
                 <p>Contacts</p>
             </a>
-            <a href="./notify.html">
-                <figure><img src="../static/images/notifications.png" alt="notifications"></figure>
+            <a href="templates/notify.html">
+                <figure><img src="static/images/notifications.png" alt="notifications"></figure>
                 <p>Notifications</p>
             </a>
         </nav>
         <figure class="sun">
-            <img src="../static/images/sun.png" alt="sun">
+            <img src="static/images/sun.png" alt="sun">
         </figure>
     </header>
 
@@ -115,25 +115,25 @@
             <div class="screen">
                 <ul>
                     <li>
-                        <img src="../static/images/im4.jpeg" alt="im4">
+                        <img src="static/images/im4.jpeg" alt="im4">
                     </li>
                     <li>
-                        <img src="../static/images/im12.jpeg" alt="im12">
+                        <img src="static/images/im12.jpeg" alt="im12">
                     </li>
                     <li>
-                        <img src="../static/images/im14.jpeg" alt="im14">
+                        <img src="static/images/im14.jpeg" alt="im14">
                     </li>
                     <li>
-                        <img src="../static/images/im15.jpeg" alt="im15">
+                        <img src="static/images/im15.jpeg" alt="im15">
                     </li>
                     <li>
-                        <img src="../static/images/im11.jpeg" alt="im11">
+                        <img src="static/images/im11.jpeg" alt="im11">
                     </li>
                 </ul>
             </div>
             <div class="btn">
                 <button class="left">
-                    <img src="../static/images/arrowLeft.png" alt="arrowLeft">
+                    <img src="static/images/arrowLeft.png" alt="arrowLeft">
                 </button>
                 <ul>
                     <li></li>
@@ -142,7 +142,7 @@
                     <li></li>
                 </ul>
                 <button class="right">
-                    <img src="../static/images/arrowRight.png" alt="arrowRight">
+                    <img src="static/images/arrowRight.png" alt="arrowRight">
                 </button>
             </div>
         </section>
@@ -150,19 +150,19 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="../static/images/devis.png" alt="devis">
+                        <img src="static/images/devis.png" alt="devis">
                     </figure>
                     <figcaption>Devis</figcaption>
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/assistance.png" alt="assistance">
+                        <img src="static/images/assistance.png" alt="assistance">
                     </figure>
                     <figcaption>Assistance</figcaption>
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/expertise.png" alt="expertise">
+                        <img src="static/images/expertise.png" alt="expertise">
                     </figure>
                     <figcaption>Expertise</figcaption>
                 </li>
@@ -173,7 +173,7 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="../static/images/im2.jpeg" alt="im2">
+                        <img src="static/images/im2.jpeg" alt="im2">
                     </figure>
                     <div class="det">
                         <h2>Pose d'un echaffaudage a Longpom</h2>
@@ -191,7 +191,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/im3.jpeg" alt="im2">
+                        <img src="static/images/im3.jpeg" alt="im2">
                     </figure>
                     <div class="det">
                         <h2>Pose d'un echaffaudage a Longpom</h2>
@@ -209,7 +209,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/im4.jpeg" alt="im2">
+                        <img src="static/images/im4.jpeg" alt="im2">
                     </figure>
                     <div class="det">
                         <h2>Pose d'un echaffaudage a Longpom</h2>
@@ -227,7 +227,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/im5.jpeg" alt="im2">
+                        <img src="static/images/im5.jpeg" alt="im2">
                     </figure>
                     <div class="det">
                         <h2>Pose d'un echaffaudage a Longpom</h2>
@@ -245,7 +245,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/im6.jpeg" alt="im2">
+                        <img src="static/images/im6.jpeg" alt="im2">
                     </figure>
                     <div class="det">
                         <h2>Pose d'un echaffaudage a Longpom</h2>
@@ -263,7 +263,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="../static/images/im7.jpeg" alt="im2">
+                        <img src="static/images/im7.jpeg" alt="im2">
                     </figure>
                     <div class="det">
                         <h2>Pose d'un echaffaudage a Longpom</h2>
@@ -283,6 +283,6 @@
         </article>
     </main>
 
-    <script src="../static/js/index.js" defer></script>
+    <script src="static/js/index.js" defer></script>
 </body>
 </html>
