--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         </div>
         <div class="mBody">
             <nav>
-                <a href="templates/services.html">
+                <a href="./templates/services.html">
                     <figure><img src="static/images/services.png" alt="services"></figure>
                     <p>Services</p>
                 </a>
-                <a href="templates/contact.html">
+                <a href="./templates/contact.html">
                     <figure><img src="static/images/contact.png" alt="contact"></figure>
                     <p>Contacts</p>
                 </a>
-                <a href="templates/notify.html">
+                <a href="./templates/notify.html">
                     <figure><img src="static/images/notifications.png" alt="notifications"></figure>
                     <p>Notifications</p>
                 </a>
