--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </li>
                     <li>
                         <figure>
-                            <img src="static/images/satisfied.png" alt="satisfied">
+                            <img src="static/images/services.png" alt="satisfied">
                         </figure>
                         <figcaption>+15 clients satisfaits</figcaption>
                     </li>
